add testing code to test from within jupyter

--- a/lib/waveshare_epd/epd2in7.ipynb
+++ b/lib/waveshare_epd/epd2in7.ipynb
@@ -2,25 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[NbConvertApp] Converting notebook epd2in7.ipynb to python\n",
-      "[NbConvertApp] Writing 19158 bytes to epd2in7.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!jupyter-nbconvert --to python --template python_clean epd2in7.ipynb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +21,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import epdconfig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epdconfig = epdconfig.RaspberryPi()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,8 +70,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "code_folding": [
+     15,
+     26,
+     37,
+     48,
+     59,
+     124,
+     132,
+     138,
+     146,
+     152,
+     417,
+     502,
+     515
+    ]
+   },
    "outputs": [],
    "source": [
     "# Display resolution\n",
@@ -135,6 +160,7 @@
     "    ]\n",
     "    ###################full screen update LUT######################\n",
     "    #0~3 gray\n",
+    "    \n",
     "    gray_lut_vcom = [\n",
     "    0x00, 0x00,\n",
     "    0x00, 0x0A, 0x00, 0x00, 0x00, 0x01,\n",
@@ -145,6 +171,7 @@
     "    0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
     "    0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\t\t\t\t\n",
     "    ]\n",
+    "    \n",
     "    #R21\n",
     "    gray_lut_ww =[\n",
     "    0x40, 0x0A, 0x00, 0x00, 0x00, 0x01,\n",
@@ -266,7 +293,6 @@
     "        self.reset()\n",
     "        \n",
     "        # see pp35: https://www.waveshare.com/w/upload/2/2d/2.7inch-e-paper-Specification.pdf\n",
-    "        \n",
     "        logging.debug('booster soft start')\n",
     "        self.send_command(0x06) # BOOSTER_SOFT_START\n",
     "        self.send_data(0x07)\n",
@@ -316,7 +342,7 @@
     "        self.ReadBusy()\n",
     "\n",
     "        # 0x16 runs a partial display refresh - see p17 in docs\n",
-    "        # purpose is unclear -- perhaps wipes display? \n",
+    "        # purpose is unclear -- does not appear to affect function\n",
     "#         self.send_command(0x16) # PARTIAL_DISPLAY_REFRESH\n",
     "#         self.send_data(0x00)\n",
     "#         self.send_command(0x04) # POWER_ON\n",
@@ -346,7 +372,6 @@
     "        logging.debug('VCM_DC setting ')       \n",
     "        self.send_command(0x82) # VCM_DC_SETTING_REGISTER\n",
     "        self.send_data(0x12)\n",
-    "\n",
     "        \n",
     "        self.set_lut()\n",
     "        \n",
@@ -591,6 +616,106 @@
     "        epdconfig.delay_ms(2000)\n",
     "        epdconfig.module_exit()\n",
     "### END OF FILE ###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "import time\n",
+    "from PIL import Image,ImageDraw,ImageFont"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "font_file = str(Path('../../pic/Font.ttc').resolve())\n",
+    "pic = Path('../../pic/2in7.bmp')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "epd = EPD()\n",
+    "epd.init()\n",
+    "# epd.Clear(0xFF)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epd.init()\n",
+    "\n",
+    "font24 = ImageFont.truetype(font_file, 24)\n",
+    "font18 = ImageFont.truetype(font_file, 18)\n",
+    "font35 = ImageFont.truetype(font_file, 35)\n",
+    "# Drawing on the Horizontal image\n",
+    "logging.info(\"1.Drawing on the Horizontal image...\")\n",
+    "Himage = Image.new('1', (epd.height, epd.width), 255)  # 255: clear the frame\n",
+    "draw = ImageDraw.Draw(Himage)\n",
+    "draw.text((10, 0), 'hello world', font = font24, fill = 0)\n",
+    "draw.text((150, 0), u'微雪电子', font = font24, fill = 0)    \n",
+    "draw.line((20, 50, 70, 100), fill = 0)\n",
+    "draw.line((70, 50, 20, 100), fill = 0)\n",
+    "draw.rectangle((20, 50, 70, 100), outline = 0)\n",
+    "draw.line((165, 50, 165, 100), fill = 0)\n",
+    "draw.line((140, 75, 190, 75), fill = 0)\n",
+    "draw.arc((140, 50, 190, 100), 0, 360, fill = 0)\n",
+    "draw.rectangle((80, 50, 130, 100), fill = 0)\n",
+    "draw.chord((200, 50, 250, 100), 0, 360, fill = 0)\n",
+    "epd.display(epd.getbuffer(Himage))\n",
+    "time.sleep(2)\n",
+    "\n",
+    "Himage = Image.open(pic)\n",
+    "epd.display(epd.getbuffer(Himage))\n",
+    "\n",
+    "logging.info(\"Clear...\")\n",
+    "# epd.Clear(0xFF)\n",
+    "logging.info(\"Goto Sleep...\")\n",
+    "epd.sleep()    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "epd.init()"
    ]
   },
   {
