rename function for consistency

--- a/lib/waveshare_epd/epd2in7.ipynb
+++ b/lib/waveshare_epd/epd2in7.ipynb
@@ -80,14 +80,17 @@
      59,
      71,
      83,
-     126,
-     134,
-     140,
-     148,
-     154,
-     418,
-     503,
-     516
+     94,
+     105,
+     116,
+     127,
+     135,
+     141,
+     149,
+     155,
+     419,
+     504,
+     517
     ]
    },
    "outputs": [],
@@ -198,24 +201,24 @@
     "    \n",
     "    #R23H w\n",
     "    gray_lut_wb =[\n",
-    "    0x40, 0x0A, 0x00, 0x00, 0x00, 0x01,\n",
-    "    0x90, 0x14, 0x14, 0x00, 0x00, 0x01,\n",
-    "    0x00, 0x14, 0x0A, 0x00, 0x00, 0x01,\n",
-    "    0x99, 0x0B, 0x04, 0x04, 0x01, 0x01,\n",
-    "    0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
-    "    0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
-    "    0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
+    "        0x40, 0x0A, 0x00, 0x00, 0x00, 0x01,\n",
+    "        0x90, 0x14, 0x14, 0x00, 0x00, 0x01,\n",
+    "        0x00, 0x14, 0x0A, 0x00, 0x00, 0x01,\n",
+    "        0x99, 0x0B, 0x04, 0x04, 0x01, 0x01,\n",
+    "        0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
+    "        0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
+    "        0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
     "    ]\n",
     "    \n",
     "    #R24H b\n",
     "    gray_lut_bb =[\n",
-    "    0x80, 0x0A, 0x00, 0x00, 0x00, 0x01,\n",
-    "    0x90, 0x14, 0x14, 0x00, 0x00, 0x01,\n",
-    "    0x20, 0x14, 0x0A, 0x00, 0x00, 0x01,\n",
-    "    0x50, 0x13, 0x01, 0x00, 0x00, 0x01,\n",
-    "    0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
-    "    0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
-    "    0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
+    "        0x80, 0x0A, 0x00, 0x00, 0x00, 0x01,\n",
+    "        0x90, 0x14, 0x14, 0x00, 0x00, 0x01,\n",
+    "        0x20, 0x14, 0x0A, 0x00, 0x00, 0x01,\n",
+    "        0x50, 0x13, 0x01, 0x00, 0x00, 0x01,\n",
+    "        0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
+    "        0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
+    "        0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n",
     "    ]\n",
     "    \n",
     "#     # Hardware reset\n",
@@ -264,30 +267,30 @@
     "        for count in range(0, 42):\n",
     "            self.send_data(self.lut_wb[count])\n",
     "            \n",
-    "#     def gray_SetLut(self):\n",
-    "#         self.send_command(0x20)\n",
-    "#         for count in range(0, 44):        #vcom\n",
-    "#             self.send_data(self.gray_lut_vcom[count])\n",
+    "    def set_lut_gray(self):\n",
+    "        self.send_command(0x20)\n",
+    "        for count in range(0, 44):        #vcom\n",
+    "            self.send_data(self.gray_lut_vcom[count])\n",
     "            \n",
-    "#         self.send_command(0x21)\t\t\t\t\t\t\t#red not use\n",
-    "#         for count in range(0, 42): \n",
-    "#             self.send_data(self.gray_lut_ww[count])\n",
+    "        self.send_command(0x21)\t\t\t\t\t\t\t#red not use\n",
+    "        for count in range(0, 42): \n",
+    "            self.send_data(self.gray_lut_ww[count])\n",
     "\n",
-    "#         self.send_command(0x22)\t\t\t\t\t\t\t#bw r\n",
-    "#         for count in range(0, 42): \n",
-    "#             self.send_data(self.gray_lut_bw[count])\n",
+    "        self.send_command(0x22)\t\t\t\t\t\t\t#bw r\n",
+    "        for count in range(0, 42): \n",
+    "            self.send_data(self.gray_lut_bw[count])\n",
     "\n",
-    "#         self.send_command(0x23)\t\t\t\t\t\t\t#wb w\n",
-    "#         for count in range(0, 42): \n",
-    "#             self.send_data(self.gray_lut_wb[count])\n",
+    "        self.send_command(0x23)\t\t\t\t\t\t\t#wb w\n",
+    "        for count in range(0, 42): \n",
+    "            self.send_data(self.gray_lut_wb[count])\n",
     "\n",
-    "#         self.send_command(0x24)\t\t\t\t\t\t\t#bb b\n",
-    "#         for count in range(0, 42): \n",
-    "#             self.send_data(self.gray_lut_bb[count])\n",
+    "        self.send_command(0x24)\t\t\t\t\t\t\t#bb b\n",
+    "        for count in range(0, 42): \n",
+    "            self.send_data(self.gray_lut_bb[count])\n",
     "\n",
-    "#         self.send_command(0x25)\t\t\t\t\t\t\t#vcom\n",
-    "#         for count in range(0, 42): \n",
-    "#             self.send_data(self.gray_lut_ww[count])\n",
+    "        self.send_command(0x25)\t\t\t\t\t\t\t#vcom\n",
+    "        for count in range(0, 42): \n",
+    "            self.send_data(self.gray_lut_ww[count])\n",
     "    \n",
     "    def init(self):\n",
     "        logging.info('init EPD screen')\n",
@@ -588,7 +591,7 @@
     "#                     temp1 <<= 2\n",
     "#             self.send_data(temp3)\n",
     "        \n",
-    "#         self.gray_SetLut()\n",
+    "#         self.set_lut_gray()\n",
     "#         self.send_command(0x12)\n",
     "#         epdconfig.delay_ms(200)\n",
     "#         self.ReadBusy()\n",
