--- a/lib/waveshare_epd/epd2in7.ipynb
+++ b/lib/waveshare_epd/epd2in7.ipynb
@@ -272,23 +272,23 @@
     "        for count in range(0, 44):        #vcom\n",
     "            self.send_data(self.gray_lut_vcom[count])\n",
     "            \n",
-    "        self.send_command(0x21)\t\t\t\t\t\t\t#red not use\n",
+    "        self.send_command(0x21) #red not use\n",
     "        for count in range(0, 42): \n",
     "            self.send_data(self.gray_lut_ww[count])\n",
     "\n",
-    "        self.send_command(0x22)\t\t\t\t\t\t\t#bw r\n",
+    "        self.send_command(0x22) #bw r\n",
     "        for count in range(0, 42): \n",
     "            self.send_data(self.gray_lut_bw[count])\n",
     "\n",
-    "        self.send_command(0x23)\t\t\t\t\t\t\t#wb w\n",
+    "        self.send_command(0x23) #wb w\n",
     "        for count in range(0, 42): \n",
     "            self.send_data(self.gray_lut_wb[count])\n",
     "\n",
-    "        self.send_command(0x24)\t\t\t\t\t\t\t#bb b\n",
+    "        self.send_command(0x24) #bb b\n",
     "        for count in range(0, 42): \n",
     "            self.send_data(self.gray_lut_bb[count])\n",
     "\n",
-    "        self.send_command(0x25)\t\t\t\t\t\t\t#vcom\n",
+    "        self.send_command(0x25)\t #vcom\n",
     "        for count in range(0, 42): \n",
     "            self.send_data(self.gray_lut_ww[count])\n",
     "    \n",
