--- a/lib/waveshare_epd/epd2in7.ipynb
+++ b/lib/waveshare_epd/epd2in7.ipynb
@@ -70,27 +70,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 57,
    "metadata": {
     "code_folding": [
-     15,
-     26,
-     37,
-     48,
-     59,
-     71,
-     83,
-     94,
-     105,
-     116,
      127,
      135,
      141,
      149,
      155,
-     419,
-     504,
-     517
+     172
     ]
    },
    "outputs": [],
@@ -302,11 +290,11 @@
     "        \n",
     "        # see pp35: https://www.waveshare.com/w/upload/2/2d/2.7inch-e-paper-Specification.pdf\n",
     "        logging.debug('booster soft start')\n",
-    "        self.send_command(0x06) # BOOSTER_SOFT_START\n",
+    "        self.send_command(0x06) # BOOSTER_SOFT_START see PP13-14\n",
+    "#         self.send_data(0x03)\n",
+    "        self.send_data(0x07) \n",
     "        self.send_data(0x07)\n",
-    "        self.send_data(0x07)\n",
-    "#         self.send_data(0x17)\n",
-    "        self.send_data(0x04)\n",
+    "        self.send_data(0x17)\n",
     "    \n",
     "        # poorly documented -- unclear what this does\n",
     "        # see https://github.com/waveshare/e-Paper/issues/155\n",
@@ -385,10 +373,13 @@
     "        \n",
     "        return 0\n",
     "\n",
-    "#     def Init_4Gray(self):\n",
-    "#         if (epdconfig.module_init() != 0):\n",
-    "#             return -1\n",
-    "#         self.reset()\n",
+    "    def Init_4Gray(self):\n",
+    "        if (epdconfig.module_init() != 0):\n",
+    "            return -1\n",
+    "        self.reset()\n",
+    "        \n",
+    "        \n",
+    "        \n",
     "        \n",
     "#         self.send_command(0x01)\t\t\t#POWER SETTING\n",
     "#         self.send_data (0x03)\n",
@@ -628,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +649,7 @@
        "0"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +708,7 @@
        "0"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
