add power optimization

--- a/lib/waveshare_epd/epd2in7.ipynb
+++ b/lib/waveshare_epd/epd2in7.ipynb
@@ -281,7 +281,7 @@
     "            self.send_data(self.gray_lut_ww[count])\n",
     "    \n",
     "    def init(self):\n",
-    "        logging.info('init EPD screen')\n",
+    "        logging.info('init EPD screen (Black & White)')\n",
     "        if (epdconfig.module_init() != 0):\n",
     "            return -1\n",
     "            \n",
@@ -291,11 +291,10 @@
     "        # see pp35: https://www.waveshare.com/w/upload/2/2d/2.7inch-e-paper-Specification.pdf\n",
     "        logging.debug('booster soft start')\n",
     "        self.send_command(0x06) # BOOSTER_SOFT_START see PP13-14\n",
-    "#         self.send_data(0x03)\n",
-    "        self.send_data(0x07) \n",
-    "        self.send_data(0x07)\n",
-    "        self.send_data(0x17)\n",
-    "    \n",
+    "        self.send_data(0x07) # PHA\n",
+    "        self.send_data(0x07) # PHB \n",
+    "        self.send_data(0x17) # PHC\n",
+    "            \n",
     "        # poorly documented -- unclear what this does\n",
     "        # see https://github.com/waveshare/e-Paper/issues/155\n",
     "        logging.debug('power optimization stages 1-4')\n",
@@ -374,11 +373,39 @@
     "        return 0\n",
     "\n",
     "    def Init_4Gray(self):\n",
+    "        logging.info('init EPD screen (4Gray & White)')\n",
     "        if (epdconfig.module_init() != 0):\n",
     "            return -1\n",
     "        self.reset()\n",
     "        \n",
+    "        logging.debug('booster soft start')\n",
+    "        self.send_command(0x06) # BOOSTER_SOFT_START see PP13-14\n",
+    "        self.send_data(0x07) # PHA\n",
+    "        self.send_data(0x07) # PHB \n",
+    "        self.send_data(0x17) # PHC\n",
+    "\n",
+    "        # poorly documented -- unclear what this does\n",
+    "        # see https://github.com/waveshare/e-Paper/issues/155\n",
+    "        logging.debug('power optimization stages 1-4')\n",
+    "        # Power optimization stage 1\n",
+    "        self.send_command(0xF8)\n",
+    "        self.send_data(0x60)\n",
+    "        self.send_data(0xA5)\n",
     "        \n",
+    "        # Power optimization stage 2\n",
+    "        self.send_command(0xF8)\n",
+    "        self.send_data(0x89)\n",
+    "        self.send_data(0xA5)\n",
+    "        \n",
+    "        # Power optimization stage 3\n",
+    "        self.send_command(0xF8)\n",
+    "        self.send_data(0x90)\n",
+    "        self.send_data(0x00)\n",
+    "        \n",
+    "        # Power optimization stage 4\n",
+    "        self.send_command(0xF8)\n",
+    "        self.send_data(0x93)\n",
+    "        self.send_data(0x2A)                \n",
     "        \n",
     "        \n",
     "#         self.send_command(0x01)\t\t\t#POWER SETTING\n",
@@ -386,12 +413,6 @@
     "#         self.send_data (0x00)    \n",
     "#         self.send_data (0x2b)\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t \n",
     "#         self.send_data (0x2b)\t\t\n",
-    "\n",
-    "\n",
-    "#         self.send_command(0x06)         #booster soft start\n",
-    "#         self.send_data (0x07)\t\t#A\n",
-    "#         self.send_data (0x07)\t\t#B\n",
-    "#         self.send_data (0x17)\t\t#C \n",
     "\n",
     "#         self.send_command(0xF8)         #boost??\n",
     "#         self.send_data (0x60)\n",
