clean up gray init

--- a/lib/waveshare_epd/epd2in7.ipynb
+++ b/lib/waveshare_epd/epd2in7.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 60,
    "metadata": {
     "code_folding": [
      127,
@@ -344,9 +344,8 @@
     "#         self.ReadBusy()\n",
     "        \n",
     "        logging.debug('pannel setting')\n",
-    "        self.send_command(0x00) # PANEL_SETTING\n",
-    "        # should be (0x1F) according to standard; 0xAF according to WaveShare master\n",
-    "        self.send_data(0xAF) # KW-BF   KWR-AF    BWROTP 0f\n",
+    "        self.send_command(0x00) # PANEL_SETTING (see p11)\n",
+    "        self.send_data(0xAF) # res 296x160, use LUT, USE B/W/R pixels, scan up, shift rt, booster on, booster off\n",
     "        \n",
     "        logging.debug('PLL control frequency setting (100Hz)')\n",
     "        self.send_command(0x30) # PLL_CONTROL\n",
@@ -405,66 +404,45 @@
     "        # Power optimization stage 4\n",
     "        self.send_command(0xF8)\n",
     "        self.send_data(0x93)\n",
-    "        self.send_data(0x2A)                \n",
+    "        self.send_data(0x2A)\n",
+    "\n",
+    "        logging.debug('reset DFV_EN')\n",
+    "        self.send_command(0x16) # PARTIAL_DISPLAY_REFRESH\n",
+    "        self.send_data(0x00)        \n",
+    "\n",
+    "        logging.debug('power setting')\n",
+    "        self.send_command(0x01) # POWER_SETTING\n",
+    "        self.send_data(0x03) # VDS_EN, VDG_EN\n",
+    "        self.send_data(0x00) # VCOM_HV, VGHL_LV[1], VGHL_LV[0]\n",
+    "        self.send_data(0x2b) # VDH\n",
+    "        self.send_data(0x2b) # VDL\n",
+    "#         self.send_data(0x09) # VDHR -- set voltage for red pixel (uneeded in B&W)        \n",
+    "\n",
+    "        logging.debug('pannel setting')\n",
+    "        self.send_command(0x00) # PANEL_SETTING (see p13)\n",
+    "        self.send_data(0xBF) # res 296z160, use LUT, use BW pixles LUT1, scan up, shift rt, booster on, booster off\n",
+    "\n",
     "        \n",
+    "        logging.debug('PLL control frequency setting')\n",
+    "        self.send_command(0x30) # PLL_CONTROL\n",
+    "        self.send_data(0x90) # original from code 100Hz?\n",
+    "\n",
+    "        logging.debug('resolution setting (176x264)')\n",
+    "        self.send_command(0x61)\n",
+    "        self.send_data(0x00) #176\n",
+    "        self.send_data(0xB0) \n",
+    "        self.send_data(0x01) #264\n",
+    "        self.send_data(0x08)\n",
+    "\n",
+    "        # order of VCOM and VCM_DC is swapped in spec; must be swapped as shown below\n",
+    "        logging.debug('Vcom and data interval setting')\n",
+    "        self.send_command(0X50) #VCOM AND DATA INTERVAL SETTING\n",
+    "        self.send_data(0x57) # 0x57 in original code\n",
     "        \n",
-    "#         self.send_command(0x01)\t\t\t#POWER SETTING\n",
-    "#         self.send_data (0x03)\n",
-    "#         self.send_data (0x00)    \n",
-    "#         self.send_data (0x2b)\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t \n",
-    "#         self.send_data (0x2b)\t\t\n",
-    "\n",
-    "#         self.send_command(0xF8)         #boost??\n",
-    "#         self.send_data (0x60)\n",
-    "#         self.send_data (0xA5)\n",
-    "\n",
-    "#         self.send_command(0xF8)         #boost??\n",
-    "#         self.send_data (0x89)\n",
-    "#         self.send_data (0xA5)\n",
-    "\n",
-    "#         self.send_command(0xF8)         #boost??\n",
-    "#         self.send_data (0x90)\n",
-    "#         self.send_data (0x00)\n",
-    "\n",
-    "#         self.send_command(0xF8)         #boost??\n",
-    "#         self.send_data (0x93)\n",
-    "#         self.send_data (0x2A)\n",
-    "\n",
-    "#         self.send_command(0xF8)         #boost??\n",
-    "#         self.send_data (0xa0)\n",
-    "#         self.send_data (0xa5)\n",
-    "\n",
-    "#         self.send_command(0xF8)         #boost??\n",
-    "#         self.send_data (0xa1)\n",
-    "#         self.send_data (0x00)\n",
-    "\n",
-    "#         self.send_command(0xF8)         #boost??\n",
-    "#         self.send_data (0x73)\n",
-    "#         self.send_data (0x41)\n",
-    "\n",
-    "#         self.send_command(0x16)\n",
-    "#         self.send_data(0x00)\t\n",
-    "\n",
-    "#         self.send_command(0x04)\n",
-    "#         self.ReadBusy()\n",
-    "\n",
-    "#         self.send_command(0x00)\t\t\t#panel setting\n",
-    "#         self.send_data(0xbf)\t\t#KW-BF   KWR-AF\tBWROTP 0f\n",
-    "\n",
-    "#         self.send_command(0x30)\t\t\t#PLL setting\n",
-    "#         self.send_data (0x90)      \t#100hz \n",
-    "\n",
-    "#         self.send_command(0x61)\t\t\t#resolution setting\n",
-    "#         self.send_data (0x00)\t\t#176\n",
-    "#         self.send_data (0xb0)     \t \n",
-    "#         self.send_data (0x01)\t\t#264\n",
-    "#         self.send_data (0x08)\n",
-    "\n",
-    "#         self.send_command(0x82)\t\t\t#vcom_DC setting\n",
-    "#         self.send_data (0x12)\n",
-    "\n",
-    "#         self.send_command(0X50)\t\t\t#VCOM AND DATA INTERVAL SETTING\t\t\t\n",
-    "#         self.send_data(0x57)\n",
+    "        logging.debug('VCM_DC setting ')       \n",
+    "        self.send_command(0x82) # VCM_DC_SETTING_REGISTER\n",
+    "        self.send_data(0x12)        \n",
+    "        \n",
     "\n",
     "    def getbuffer(self, image):\n",
     "        # logging.debug(\"bufsiz = \",int(self.width/8) * self.height)\n",
@@ -603,7 +581,7 @@
     "#                     temp1 <<= 2\n",
     "#             self.send_data(temp3)\n",
     "        \n",
-    "#         self.set_lut_gray()\n",
+    "#         self.set_lut_gray() ## move this into the init so it's the same as the other 1bit init()\n",
     "#         self.send_command(0x12)\n",
     "#         epdconfig.delay_ms(200)\n",
     "#         self.ReadBusy()\n",
@@ -661,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +648,7 @@
        "0"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
