--- a/lib/waveshare_epd/epd2in7.ipynb
+++ b/lib/waveshare_epd/epd2in7.ipynb
@@ -443,6 +443,9 @@
     "        self.send_command(0x82) # VCM_DC_SETTING_REGISTER\n",
     "        self.send_data(0x12)        \n",
     "        \n",
+    "        # setup lookup tables\n",
+    "        self.set_lut_gray()        \n",
+    "        \n",
     "\n",
     "    def getbuffer(self, image):\n",
     "        # logging.debug(\"bufsiz = \",int(self.width/8) * self.height)\n",
