return 0 from gray init for consistency

--- a/lib/waveshare_epd/epd2in7.ipynb
+++ b/lib/waveshare_epd/epd2in7.ipynb
@@ -367,6 +367,7 @@
     "        self.send_command(0x82) # VCM_DC_SETTING_REGISTER\n",
     "        self.send_data(0x12)\n",
     "        \n",
+    "        logging.debug('set b&w lookup tables')\n",
     "        self.set_lut()\n",
     "        \n",
     "        return 0\n",
@@ -444,8 +445,10 @@
     "        self.send_data(0x12)        \n",
     "        \n",
     "        # setup lookup tables\n",
+    "        logging.debug('set 4gray lookup tables')\n",
     "        self.set_lut_gray()        \n",
     "        \n",
+    "        return 0 \n",
     "\n",
     "    def getbuffer(self, image):\n",
     "        # logging.debug(\"bufsiz = \",int(self.width/8) * self.height)\n",
