add getbuffer gray

--- a/lib/waveshare_epd/epd2in7.ipynb
+++ b/lib/waveshare_epd/epd2in7.ipynb
@@ -78,7 +78,9 @@
      141,
      149,
      155,
-     172
+     172,
+     391,
+     427
     ]
    },
    "outputs": [],
@@ -474,41 +476,41 @@
     "                        buf[int((newx + newy*self.width) / 8)] &= ~(0x80 >> (y % 8))\n",
     "        return buf\n",
     "    \n",
-    "#     def getbuffer_4Gray(self, image):\n",
-    "#         # logging.debug(\"bufsiz = \",int(self.width/8) * self.height)\n",
-    "#         buf = [0xFF] * (int(self.width / 4) * self.height)\n",
-    "#         image_monocolor = image.convert('L')\n",
-    "#         imwidth, imheight = image_monocolor.size\n",
-    "#         pixels = image_monocolor.load()\n",
-    "#         i=0\n",
-    "#         # logging.debug(\"imwidth = %d, imheight = %d\",imwidth,imheight)\n",
-    "#         if(imwidth == self.width and imheight == self.height):\n",
-    "#             logging.debug(\"Vertical\")\n",
-    "#             for y in range(imheight):\n",
-    "#                 for x in range(imwidth):\n",
-    "#                     # Set the bits for the column of pixels at the current position.\n",
-    "#                     if(pixels[x, y] == 0xC0):\n",
-    "#                         pixels[x, y] = 0x80\n",
-    "#                     elif (pixels[x, y] == 0x80):\n",
-    "#                         pixels[x, y] = 0x40\n",
-    "#                     i= i+1\n",
-    "#                     if(i%4 == 0):\n",
-    "#                         buf[int((x + (y * self.width))/4)] = ((pixels[x-3, y]&0xc0) | (pixels[x-2, y]&0xc0)>>2 | (pixels[x-1, y]&0xc0)>>4 | (pixels[x, y]&0xc0)>>6)\n",
+    "    def getbuffer_4Gray(self, image):\n",
+    "        # logging.debug(\"bufsiz = \",int(self.width/8) * self.height)\n",
+    "        buf = [0xFF] * (int(self.width / 4) * self.height)\n",
+    "        image_monocolor = image.convert('L')\n",
+    "        imwidth, imheight = image_monocolor.size\n",
+    "        pixels = image_monocolor.load()\n",
+    "        i=0\n",
+    "        # logging.debug(\"imwidth = %d, imheight = %d\",imwidth,imheight)\n",
+    "        if(imwidth == self.width and imheight == self.height):\n",
+    "            logging.debug(\"Vertical\")\n",
+    "            for y in range(imheight):\n",
+    "                for x in range(imwidth):\n",
+    "                    # Set the bits for the column of pixels at the current position.\n",
+    "                    if(pixels[x, y] == 0xC0):\n",
+    "                        pixels[x, y] = 0x80\n",
+    "                    elif (pixels[x, y] == 0x80):\n",
+    "                        pixels[x, y] = 0x40\n",
+    "                    i= i+1\n",
+    "                    if(i%4 == 0):\n",
+    "                        buf[int((x + (y * self.width))/4)] = ((pixels[x-3, y]&0xc0) | (pixels[x-2, y]&0xc0)>>2 | (pixels[x-1, y]&0xc0)>>4 | (pixels[x, y]&0xc0)>>6)\n",
     "                        \n",
-    "#         elif(imwidth == self.height and imheight == self.width):\n",
-    "#             logging.debug(\"Horizontal\")\n",
-    "#             for x in range(imwidth):\n",
-    "#                 for y in range(imheight):\n",
-    "#                     newx = y\n",
-    "#                     newy = x\n",
-    "#                     if(pixels[x, y] == 0xC0):\n",
-    "#                         pixels[x, y] = 0x80\n",
-    "#                     elif (pixels[x, y] == 0x80):\n",
-    "#                         pixels[x, y] = 0x40\n",
-    "#                     i= i+1\n",
-    "#                     if(i%4 == 0):\n",
-    "#                         buf[int((newx + (newy * self.width))/4)] = ((pixels[x, y-3]&0xc0) | (pixels[x, y-2]&0xc0)>>2 | (pixels[x, y-1]&0xc0)>>4 | (pixels[x, y]&0xc0)>>6) \n",
-    "#         return buf\n",
+    "        elif(imwidth == self.height and imheight == self.width):\n",
+    "            logging.debug(\"Horizontal\")\n",
+    "            for x in range(imwidth):\n",
+    "                for y in range(imheight):\n",
+    "                    newx = y\n",
+    "                    newy = x\n",
+    "                    if(pixels[x, y] == 0xC0):\n",
+    "                        pixels[x, y] = 0x80\n",
+    "                    elif (pixels[x, y] == 0x80):\n",
+    "                        pixels[x, y] = 0x40\n",
+    "                    i= i+1\n",
+    "                    if(i%4 == 0):\n",
+    "                        buf[int((newx + (newy * self.width))/4)] = ((pixels[x, y-3]&0xc0) | (pixels[x, y-2]&0xc0)>>2 | (pixels[x, y-1]&0xc0)>>4 | (pixels[x, y]&0xc0)>>6) \n",
+    "        return buf\n",
     "    \n",
     "    def display(self, image):\n",
     "        # load image into buffer\n",
