add display 4gray

--- a/lib/waveshare_epd/epd2in7.ipynb
+++ b/lib/waveshare_epd/epd2in7.ipynb
@@ -524,76 +524,76 @@
     "        self.send_command(0x12) # display refresh\n",
     "        self.ReadBusy()\n",
     "\n",
-    "#     def display_4Gray(self, image):\n",
-    "#         self.send_command(0x10)\n",
-    "#         for i in range(0, 5808):                     #5808*4  46464\n",
-    "#             temp3=0\n",
-    "#             for j in range(0, 2):\n",
-    "#                 temp1 = image[i*2+j]\n",
-    "#                 for k in range(0, 2):\n",
-    "#                     temp2 = temp1&0xC0 \n",
-    "#                     if(temp2 == 0xC0):\n",
-    "#                         temp3 |= 0x01#white\n",
-    "#                     elif(temp2 == 0x00):\n",
-    "#                         temp3 |= 0x00  #black\n",
-    "#                     elif(temp2 == 0x80): \n",
-    "#                         temp3 |= 0x01  #gray1\n",
-    "#                     else: #0x40\n",
-    "#                         temp3 |= 0x00 #gray2\n",
-    "#                     temp3 <<= 1\t\n",
+    "    def display_4Gray(self, image):\n",
+    "        self.send_command(0x10)\n",
+    "        for i in range(0, 5808):                     #5808*4  46464\n",
+    "            temp3=0\n",
+    "            for j in range(0, 2):\n",
+    "                temp1 = image[i*2+j]\n",
+    "                for k in range(0, 2):\n",
+    "                    temp2 = temp1&0xC0 \n",
+    "                    if(temp2 == 0xC0):\n",
+    "                        temp3 |= 0x01#white\n",
+    "                    elif(temp2 == 0x00):\n",
+    "                        temp3 |= 0x00  #black\n",
+    "                    elif(temp2 == 0x80): \n",
+    "                        temp3 |= 0x01  #gray1\n",
+    "                    else: #0x40\n",
+    "                        temp3 |= 0x00 #gray2\n",
+    "                    temp3 <<= 1\t\n",
     "                    \n",
-    "#                     temp1 <<= 2\n",
-    "#                     temp2 = temp1&0xC0 \n",
-    "#                     if(temp2 == 0xC0):  #white\n",
-    "#                         temp3 |= 0x01\n",
-    "#                     elif(temp2 == 0x00): #black\n",
-    "#                         temp3 |= 0x00\n",
-    "#                     elif(temp2 == 0x80):\n",
-    "#                         temp3 |= 0x01 #gray1\n",
-    "#                     else :   #0x40\n",
-    "#                             temp3 |= 0x00\t#gray2\t\n",
-    "#                     if(j!=1 or k!=1):\t\t\t\t\n",
-    "#                         temp3 <<= 1\n",
-    "#                     temp1 <<= 2\n",
-    "#             self.send_data(temp3)\n",
+    "                    temp1 <<= 2\n",
+    "                    temp2 = temp1&0xC0 \n",
+    "                    if(temp2 == 0xC0):  #white\n",
+    "                        temp3 |= 0x01\n",
+    "                    elif(temp2 == 0x00): #black\n",
+    "                        temp3 |= 0x00\n",
+    "                    elif(temp2 == 0x80):\n",
+    "                        temp3 |= 0x01 #gray1\n",
+    "                    else :   #0x40\n",
+    "                            temp3 |= 0x00\t#gray2\t\n",
+    "                    if(j!=1 or k!=1):\t\t\t\t\n",
+    "                        temp3 <<= 1\n",
+    "                    temp1 <<= 2\n",
+    "            self.send_data(temp3)\n",
     "            \n",
-    "#         self.send_command(0x13)\t       \n",
-    "#         for i in range(0, 5808):                #5808*4  46464\n",
-    "#             temp3=0\n",
-    "#             for j in range(0, 2):\n",
-    "#                 temp1 = image[i*2+j]\n",
-    "#                 for k in range(0, 2):\n",
-    "#                     temp2 = temp1&0xC0 \n",
-    "#                     if(temp2 == 0xC0):\n",
-    "#                         temp3 |= 0x01#white\n",
-    "#                     elif(temp2 == 0x00):\n",
-    "#                         temp3 |= 0x00  #black\n",
-    "#                     elif(temp2 == 0x80):\n",
-    "#                         temp3 |= 0x00  #gray1\n",
-    "#                     else: #0x40\n",
-    "#                         temp3 |= 0x01 #gray2\n",
-    "#                     temp3 <<= 1\t\n",
+    "        self.send_command(0x13)\t       \n",
+    "        for i in range(0, 5808):                #5808*4  46464\n",
+    "            temp3=0\n",
+    "            for j in range(0, 2):\n",
+    "                temp1 = image[i*2+j]\n",
+    "                for k in range(0, 2):\n",
+    "                    temp2 = temp1&0xC0 \n",
+    "                    if(temp2 == 0xC0):\n",
+    "                        temp3 |= 0x01#white\n",
+    "                    elif(temp2 == 0x00):\n",
+    "                        temp3 |= 0x00  #black\n",
+    "                    elif(temp2 == 0x80):\n",
+    "                        temp3 |= 0x00  #gray1\n",
+    "                    else: #0x40\n",
+    "                        temp3 |= 0x01 #gray2\n",
+    "                    temp3 <<= 1\t\n",
     "                    \n",
-    "#                     temp1 <<= 2\n",
-    "#                     temp2 = temp1&0xC0 \n",
-    "#                     if(temp2 == 0xC0):  #white\n",
-    "#                         temp3 |= 0x01\n",
-    "#                     elif(temp2 == 0x00): #black\n",
-    "#                         temp3 |= 0x00\n",
-    "#                     elif(temp2 == 0x80):\n",
-    "#                         temp3 |= 0x00 #gray1\n",
-    "#                     else:    #0x40\n",
-    "#                             temp3 |= 0x01\t#gray2\n",
-    "#                     if(j!=1 or k!=1):\t\t\t\t\t\n",
-    "#                         temp3 <<= 1\n",
-    "#                     temp1 <<= 2\n",
-    "#             self.send_data(temp3)\n",
+    "                    temp1 <<= 2\n",
+    "                    temp2 = temp1&0xC0 \n",
+    "                    if(temp2 == 0xC0):  #white\n",
+    "                        temp3 |= 0x01\n",
+    "                    elif(temp2 == 0x00): #black\n",
+    "                        temp3 |= 0x00\n",
+    "                    elif(temp2 == 0x80):\n",
+    "                        temp3 |= 0x00 #gray1\n",
+    "                    else:    #0x40\n",
+    "                            temp3 |= 0x01\t#gray2\n",
+    "                    if(j!=1 or k!=1):\t\t\t\t\t\n",
+    "                        temp3 <<= 1\n",
+    "                    temp1 <<= 2\n",
+    "            self.send_data(temp3)\n",
     "        \n",
-    "#         self.set_lut_gray() ## move this into the init so it's the same as the other 1bit init()\n",
-    "#         self.send_command(0x12)\n",
-    "#         epdconfig.delay_ms(200)\n",
-    "#         self.ReadBusy()\n",
-    "#         # pass\n",
+    "        self.set_lut_gray() ## move this into the init so it's the same as the other 1bit init()\n",
+    "        self.send_command(0x12)\n",
+    "        epdconfig.delay_ms(200)\n",
+    "        self.ReadBusy()\n",
+    "        # pass\n",
     "    \n",
     "    #### REVIEW ####\n",
     "    # color arg is not needed -- keep for consistency between color and non-color models?\n",
